2005-11-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/videoscale/gstvideoscale.h:
	* gst/videoscale/gstvideoscale.c:
	  remove unimplemented scale methods

2005-11-28  Tim-Philipp Müller  <tim at centricular dot net>

	* ext/ogg/gstoggmux.c: (gst_ogg_mux_send_headers):
	  Don't leak caps.

2005-11-28  Julien MOUTTE  <julien@moutte.net>

	* sys/ximage/ximagesink.c: (gst_ximagesink_ximage_put),
	(gst_ximagesink_setcaps):
	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_put),
	(gst_xvimagesink_setcaps): Fixed a tricky bug. When caps renegotiation
	happens (only visible on ximagesink but bug is in xv too) set_caps was
	destroying the internal x[v]image used to memcpy non locally alloced
	buffers so that it got renewed on next _chain. The issue is that 
	_expose will try to put that image as it reffed it in _put.
	Using gst_buffer_unref instead of destroy fixes it !

2005-11-28  Edward Hervey  <edward@fluendo.com>

	* gst/playback/gstdecodebin.c: (gst_decode_bin_init),
	(try_to_link_1), (queue_filled_cb):
	Better use of the queues. Start with a small size queue and only increase
	the size of the queues when the other queues are empty.

2005-11-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst-libs/gst/video/Makefile.am:
	  compile in copied-over videofilter into the video library
	* gst-libs/gst/video/videosink.h:
	  rename the header to gstvideosink.h since it's a base GstObject class
	* sys/ximage/ximagesink.h:
	* sys/xvimage/xvimagesink.h:
	  use the new header

2005-11-28  Wim Taymans  <wim@fluendo.com>

	* gst/playback/gstplaybasebin.c: (group_commit), (probe_triggered):
	* gst/playback/gstplaybasebin.h:
	Prepare to handle errors betters.

	* gst/playback/gstplaybin.c: (add_sink), (setup_sinks):
	Set sinks to PAUSED first before adding and linking them so that
	we don't interrupt dataflow.

2005-11-28  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/TODO:
	Updated TODO

	* gst-libs/gst/audio/gstaudiosink.c: